--- a/galery.html
+++ b/galery.html
@@ -9,32 +9,25 @@
 </head>
 
 <body>
-  <div class="navigation">
+    <div class="header-box">
+      <div class="logo">
+        <img src="image/logo.png" alt="logo">
+      </div>
+    <h1>Orvature</h1>
     <nav>
-      <div class="grid-nav">
-        <div class="logo">
-          <img src="image/logo.png" alt="logo">
-        </div>
-        <div>
-          <h1>Orvature</h1>
-        </div>
-        <div>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="galery.html">Galery</a></li>
-            <li><a href="booking.html">Booking</a></li>
-          </ul>
-        </div>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="galery.html">Galery</a></li>
+          <li><a href="booking.html">Booking</a></li>
+        </ul>
       </div>
     </nav>
   </div>
-  
   <div class="content-div">
     <div class="search-nav">
       <input type="text" placeholder="Search">
     </div>
   </div>
-
   <div class="footer">
     <h4>Join to our Team</h4>
     <h3>Sign up to get the news</h3>
@@ -45,5 +38,6 @@
       </div>
     </form>
     <footer>&copy; 2023 ORVATURE</footer>
+  </div>
 </body>
 </html>
