aria and little css

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <!--Here are the skip links-->
   <div class="container">
     <ul class="skip-links">
-      <li><a href="#nav">Skip to main nav</a></li>
-      <li><a href="#main">Skip to main content</a></li>
-      <li><a href="#join">Skip to join to our team</a></li>
+      <li><a href="#nav" aria-label="Add skip to main nav">main nav</a></li>
+      <li><a href="#main" aria-label="Add skip to main content">main content</a></li>
+      <li><a href="#join" aria-label="Add skip to join to our team">join to our team</a></li>
     </ul>
     <!--end of skip links-->
 
@@ -44,7 +44,7 @@
       </div>
         <!--I used source srcset to create resposive
         images as asked on the assignment-->
-        <picture>
+        <picture aria-details="posterAds">
           <source srcset=
             "image/poster-400_x_517.jpg"
             media="(max-width: 576px)">
